--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "build":"npm run build"
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
